// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowSelection should enhance classname with active class on row click 1`] = `
<RowRenderer
  className="my-class-names undefined active"
  index={1}
  onRowClick={[Function]}
  parent={Object {}}
  style={
    Object {
      "background": "blue",
    }
  }
/>
`;

exports[`RowSelection should enhance classname with selection class on selected row 1`] = `
<RowRenderer
  className="my-class-names undefined selected"
  index={1}
  onRowClick={undefined}
  parent={Object {}}
  style={
    Object {
      "background": "red",
    }
  }
/>
`;

exports[`RowSelection should enhance classname without selection class on non selected row 1`] = `
<RowRenderer
  className="my-class-names"
  index={1}
  onRowClick={undefined}
  parent={Object {}}
  style={
    Object {
      "background": "red",
    }
  }
/>
`;
